# fluid-simulation-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  styles.css  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/: fractal.rs  lib.rs  simu.rs  utils.rs  visualization.rs
