[package]
name = "fluid-simulation-rs"
version = "0.1.0"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
edition = "2018"

license = "Apache-2.0 OR MIT"
repository = "https://github.com/ssoudan/fluid-simulation-rs"

description = "A fluid simulation in Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
panic = 'abort'
