[package]
name = "fluid-simulation-rs"
version = "0.1.0"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
edition = "2021"

license = "MIT OR Apache-2.0"
repository = "https://github.com/ssoudan/fluid-simulation-rs"

description = "An Eulerian fluid simulation in Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-time = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Document',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Window',
  'console',
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
panic = 'abort'
