[package]
name = "fluid-simulation-rs"
version = "0.1.0"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
edition = "2021"

license = "MIT OR Apache-2.0"
repository = "https://github.com/ssoudan/fluid-simulation-rs"

description = "An Eulerian fluid simulation in Rust"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
web-time = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'ImageData',
  'CanvasRenderingContext2d',
  'Document',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'HtmlSelectElement',
  'Window',
  'console',
]

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
debug = false
panic = 'abort'

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = false
# Should we omit the default import path?
omit-default-module-path = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false
